<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_online_rule">
        <EditTextPreference
            android:key="setting_online_rule_user"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_online_rule_user" />
        <EditTextPreference
            android:key="setting_online_rule_repo"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_online_rule_repo" />
        <EditTextPreference
            android:key="setting_online_rule_branch"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/setting_online_rule_branch" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>